--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "gulp-csslint": "^0.1.5",
     "gulp-jshint": "*",
     "gulp-load-plugins": "~0.5.0",
-    "gulp-sass": "^1.1.0",
+    "gulp-sass": "1.1.0",
     "jshint-stylish": "^1.0.0",
-    "node-sass": "~1.2.2"
+    "node-sass": "1.2.2"
   }
 }
